# buxn-jit

./: .clangd  .gitmodules  CMakeLists.txt  README.md  jitdump.hexpat  test  watch
.github/workflows/: build.yml
include/buxn/: jit.h
include/buxn/dbg/: jit-gdb.h
include/buxn/jit/: composite_hook.h  gdb.h  label_map.h  perf.h
include/buxn/vm/: jit.h
src/: CMakeLists.txt  addr_mapping.h  cli.c  jit.c  perf.c
src/gdb/: dbg_info.h  hook.c  reader.c
tests/: CMakeLists.txt  basic.c  common.c  common.h  device.c  jump.c  main.c  memory.c  opctest.c  optimization.c  resources.rc
